<resources>
    <string name="app_name">ProjectZero</string>

    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>

    <string name="project_spotify_streamer">Spotify streamer</string>
    <string name="project_scores_app">Scores App</string>
    <string name="project_library_app">Library App</string>
    <string name="project_build_it_bigger">Build It Bigger</string>
    <string name="project_xyz_reader">XYZ Reader</string>
    <string name="project_captstone_my_app">Capstone app</string>


    <string name="this_button_will_launch">This button will launch</string>
</resources>
